<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="terms_and_conditions">الشروط والأحكام</string>
    <string name="read_and_accept"> لقد قرأت وقبلت </string>
    <string name="reservation_instructions">تعليمات الحجز</string>
    <string name="reservation_time_change_terms">تعديل موعد او إلغاء السفر</string>
    <string name="payment_conditions">الحجز و الدفع الإلكتروني</string>
    <string name="reservation_instructions_details">التذكرة صالحة للسفر على الخدمة المحددة بها والخاضعة للقيود او البيانات المدونة عليها عند الإصدار كنوع الخدمة وتاريخ السفر واليوم والساعة المحددة والسعر وكافة البيانات الأخرى\n يجب على المسافر التاكد جيدا قبل الحجز بمسار الرحلة و وقت القيام و محطة الركوب و الخدمات الخاصة بكل اتوبيس و اسم شركة اتوبيس النقل البرى و معنى الدفع هو انك تاكدت و على علم تام بكل المعلومات السابق ذكرها \n يجب ان تحتفظ بتذكرتك ايصال فوري أثناء الرحلة ويجب ان تقدمها في حال طلبها للفحص\n اذا لم تكن تذكرتك معك علي متن الاتوبيس و اتضح عدم قيامك بالحجز مسبقا يتحتم عليك دفع قيمة تذكره أخري طبقا لتوافر المقاعد و حينئذ يتم شراء التذكرة من خلال السائق فقط مع دفع الغرامة المقررة لذلك\n الشركة الإنجليزية للنقل والرحلات لن تقوم باستبدال اي تذاكر مفقودة او مسروقه و في حالة عدم التمكن من اصدار بدل فاقد للتذكرة وفي حالة اثبات ملكية المسافر او من حجز له سيتم دفع الغرامه المقرره وفي حالة عدم الوصول لبيانات التذكره علي المسافر شراء تذكرة أخري وفقا لقيمه التذكرة المعلنة لتمكن من السفر إن وجد مقاعد فارغه\n في حالة زيادة او انخفاض أسعار التذاكر المعلنة بعد شراء التذكرة لا يحق مطالبة الشركة بدفع أو استرداد فارق السعر\n ولا يمكن استرجاع التذاكر المخفضة الخاصة بالعروض\n من الممكن للسائق ان يُصدر تذكره للراكب في وقت المغادرة وذلك في حاله توافر مقاعد شاغره بالأتوبيس ترجع للسائق او الشركة الإنجليزية للنقل والرحلات يحق للشركة الإنجليزية للنقل والرحلات تعديل جدول الرحلات اليومي او تعديل اسعار التذاكر دون اخطار مسبق مع امكانية التواصل مع الراكب بشأن تعديل موعد السفر بوقت كافي \n</string>
    <string name="global_terms_details">على المسافر التواجد في محطه المغادرة قبل الموعد المقرر للرحلة ب 30 دقيقة\n وذلك لأتاحه مساحة من الوقت لإجراءات الصعود علي متن الأتوبيس ومنع اي تأخير \n يتوقف الاتوبيس فقط أركاب/ تنزيل الركاب في المحطات الرسمية وفقا لخط السير المعلن للرحلة\n الوصول الي محطه المغادرة قبل موعد الرحلة هو مسئولية خالصة على المسافروفي حالة عدم لحاق المسافر بموعد الرحلة تعتبر التذكرة ملغية و لا يحق له طلب استرداد قيمة اي مرتجع او تعويض\n لا يسمح بعودة الاتوبيس لمحطة السفر أو نقطة التجمع مره اخري للاتقاط الركاب المتخلفين عن موعد الرحلة بعد تحرك الاتوبيس في الموعد المحدد له\n قد يتم إلغاء رحلة او تعديل موعدها وقد يكون ذلك نتيجة لعوامل خارجة عن إرادة الشركة مثل الطقس و حوادث الطرق والتعليمات الأمنيه و المشاكل الفنية الطارئة أو اية ظروف قهرية اخري و في هذه الحالة يحق للمسافر المطالبة بتعويض قيمة التذكرة من الشركة الإنجليزية للنقل والرحلات مع خصم نسبه من قيمة التذكره ان وجدت\n الشركة الإنجليزية للنقل والرحلات غير مسئوله عن أي مصاريف اضافيه قد يتحملها المسافر في حالة تخلفه عن موعد محدد بسبب التأخير في موعد المغادرة او الوصول\n و لا يحق المطالبة بتقديم اي تعويض او مرتجع في حالة وجود تأخير ساعه او أقل عن الموعد المحدد للرحلة\n علي المسافر الإلتزام بتعليمات السائق اثناء الرحلة و المسافر مسئول عن اي تلف قد يسببه للمقاعد و شاشات العرض أو اية تجهيزات بصالون األتوبيس و يتحمل المسافر قيمة التلفيات و االضرار و كذلك المسائلة القانونية في حالة رفضه التعويض المحدد من قبل الشركة\n في حالة رغبة المسافر بأبداء اية ملاحظات او الأخطار بمشكلة او شكوى بخصوص الخدمة يمكن للمسافر ان يتقدم بأخطار الشركة من خلال القنوات الرسمية مثل فرع الشركة او الموقع الرسمي على الانترنت أو الخط الساخن و في خلال خمسه ايام من تاريخ الوصول و سيتم التحقيق بخصوص الشكوى المقدمة و الرجوع للمسافر خلال 30 يوم شرط الاحتفاظ بتذكرة السفر حيث انها تعتبر بمثابة عقد بين المسافر و الشركة الإنجليزية للنقل والرحلات</string>
    <string name="global_terms">الاحكام العامة</string>
    <string name="traveling_terms">تعليمات السفر</string>
    <string name="traveling_terms_details">تأكد من وجودك في الاتوبيس الصحيح: علي المسافر التأكد من وجوده علي متن الأتوبيس الصحيح المتجه الي المكان المحدد الذي قام بالحجز عليه</string>
    <string name="rest_terms">التوقف للاستراحة</string>
    <string name="rest_terms_details">في حاله التوقف في الاستراحات، يجب الرجوع الي الاتوبيس في الوقت المتاح للاستراحة بالضبط\n والشركة غير مُطالبه بتعطيل موعد تحرك الاتوبيس لانتظار مسافر\n ولا يحق المطالبة بدفع أي تعويض او اي مصاريف اضافيه قد تحدث نتيجة تخلف المسافر عن موعد مغادرة الاتوبيس من موقع الاستراحة</string>
    <string name="seat_belt_terms">أحزمة الامان</string>
    <string name="seat_belt_terms_details">المسافر مُطالب قانونا بارتداء حزام الامان المتاح بالمقعد طوال الوقت أثناء الرحلة\n التدخين ممنوع سواء علي متن الاتوبيس او فى المحطة وبناء علي انه لا يوجد دليل حول مدي امان السيجارة الإلكترونية فنحن نطلب من عملائنا الكرام عدم استخدامها ايضا أثناء التواجد علي متن اتوبيسات الشركة الإنجليزية للنقل والرحلات</string>
    <string name="children_travelling_terms">سفر الأطفال</string>
    <string name="children_travelling_terms_details">الأطفال من سن 4 سنوات تصدر لهم تذكرة كاملة\n لا يتم تخصيص مقعد للأطفال أقل من 4 سنوات و لا يتم دفع اي رسوم علي انتقالهم بشرط ان يكونوا بمصاحبه ذويهم</string>
    <string name="bags_terms">الحقائب و الشحن</string>
    <string name="bags_terms_details">الحقائب يتم تحميلها بالأتوبيس على مسئوليه أصحابها وينطبق عليها الأحكام القياسية للنقل البرى مسموح لكل راكب بعدد 2 حقيبة متوسطة الحجم علي الا يزيد الوزن الاجمالي عن 35 كيلوجرام وذلك بالإضافة الي حقيبة يد صغيره يمكن وضعها في الرف المخصص في الاتوبيس اعلي الكراسي او في المساحة اسفل كرسي الراكب\n قد تطبق رسوم شحن على اية حقيبة او شحنة اضافية مع المسافر طبقا لرسوم الشحن المقررة بمحطات السفر و علي المسافر سداد القيمة المستحقة قبل موعد السفر علي متن الأتوبيس \n يلتزم المسافر على مسئوليته الشخصية من التأكد من استلام ملصق كل حقيبة أو شحنة تابعة له و المصدر من مكاتب الحجز بمحطة السفر\n الخاصة الشركة الإنجليزية للنقل والرحلات الشركة الإنجليزية للنقل والرحلات غير مسؤلة عن متعلقات الركاب الشخصيه او فقدانها او تلفها داخل الاتوبيس او محطة الركوب و هذة مسؤلية الراكب\n اذا وجد اي حقيبة او متعلقات تخص راكب آخر بالأتوبيس او بالمحطة علي المسافر تسليمها فورا\n وفي حال وجدت اي متعلقات علي متن الاتوبيس يرجي تسليمها فورا للسائق</string>
    <string name="payment_terms_details">يتم إلغاء الحجز من الموقع او تطبيق الشركة الإنجليزية للنقل والرحلات على الموبايل تلقائيا فى حالة عدم الدفع فى خلال ساعتين من زمن الحجز مع خدمة فوري او ماشابه شركات الدفع مع العلم انه سوف يتم وضع الراكب في القائمة السوداء التي تخص الشركة اذا تم ذلك الاجراء لاكثر من ثلاث مرات \n في حاله الحجز الالكتروني يرجي التأكد من جميع البيانات الظاهرة على شاشه الحجز الخاصة بالموقع الالكتروني او تطبيق الموبايل الخاص الشركة الإنجليزية للنقل والرحلات على الراكب اظهارالرسالة النصية الخاصة بالحجز المرسلة من شركة تذكره على الموبايل SMS او على البريد الاليكترونى اذا طلب منة المفتش او موظف الحجز \n اقصى عدد تذاكر للحجز هو 8 تذاكر فقط موزعين على الذهاب و العودة فى حالة اردت تذاكر اخرى قم بالدفع فى اقرب منفذ فورى او باستخدام الفيزا و بعد ذلك يمكن للمسافر اختيار 8 تذاكر اخرى\n فى حالة ارجاع ثمن التذاكر لاسباب او ظروف قهرية من الشركة الإنجليزية للنقل والرحلات ترد قيمة التذاكر الى رصيد العميل على كارت الخصومات الخاص بة المحفظه </string>
    <string name="reservation_time_change_terms_details">في حالة عدم الحضور للسفر بالرحلة المحددة بالتذكرة تصبح التذكرة لاغية ولا يحق للمسافر طلب رد قيمة التذكرة او استخدامها على رحلة اخري لا يحق طلب استرجاع قيمة تذكره غير موجودة او مفقودة او تم سرقتها أذا تبين عدم قيام المسافر بالحجز\n لا يحق طلب استرجاع قيمة تذكره مدفوعة نقدا او من خلال وسائل الدفع المختلفة على ان يتم رد القيمة المستحقة الى رصيد العميل على كارت الخصومات الخاص بة المحفظه وذلك وفقا لقانون الاستثمار الخاص بالشراء اونلاين \n لا يمكن بيع التذكرة للغير</string>
    <string name="travelling_instructions">تعليمات السفر</string>
    <string name="accept">قبول</string>
    <string name="must_accept_terms">يجب عليك قبول الشروط والأحكام</string>
    <string name="log_in_to_your_existing_account">سجل دخول الي حسابك الحالي</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="welcome_back">مرحبًا بك مرة أخرى!</string>
    <string name="log_in">تسجيل الدخول</string>
    <string name="phone_number_not_valid">رقم غير صحيح يجب ان يبدأ ب 01 ويتكون من 11 رقم</string>
    <string name="not_have_an_account">ليس لديك حساب؟</string>
    <string name="forget_password">هل نسيت كلمة المرور؟</string>
    <string name="signup">تسجيل</string>
    <string name="password_should_be_not_empty">كلمة المرور مطلوبة</string>
    <string name="password_not_vlid">كلمة المرور غير صالحة</string>
    <string name="create_new_account">إنشاء حساب جديد</string>
</resources>